--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "dotenv-expand": "^8.0.3",
     "expo": "^44.0.0",
     "expo-location": "~14.0.1",
     "expo-splash-screen": "~0.14.1",
@@ -19,7 +20,8 @@
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "react-native-dotenv": "^0.2.0"
   },
   "private": true
 }
